# FFmpegPipeEncoder

./: CMakeLists.txt  LICENSE  README.md
FFmpegPipeEncoder/: EncoderSettings.hpp  LockFreeQueue.hpp  PipeEncoder.cpp  PipeEncoder.hpp
